--- a/views/top.ejs
+++ b/views/top.ejs
@@ -3,23 +3,45 @@
     <head>
         <meta charset="utf-8">
         <title>LIST</title>
-        <link rel="stylesheet" href="../public/css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
         <script src="/send_url.js"></script>
     </head>
     <body>
-        <div class="top-wrapper">
-        <div class="top-detail">
-            <h2 class="subtitle">Aplikasi daftar belanja</h2>
-            <h1 class="title">LIST</h1>
-            <p class="description">
-            LIST dapat membuat dan mengatur daftar pembelanjaan Anda dengan mudah.
-            <br>
-            Tambahkan barang yang Anda inginkan kapanpun, dimanapun.
-            </p>
-            <a href="/index" class="index-button">Lihat daftar</a>
+        <header>
+        <a class="header-logo">LIST</a>
+        </header>
+        <div class="container">
+        <div class="container-header">
+            <h1>Daftar Belanjaan</h1>
         </div>
-        <div class="top-image">
+        <div class="index-table-wrapper">
+            <div class="table-head">
+            <span class="id-column">ID</span>
+            <span>Item</span>
+            </div>
+            <!-- Definisikan array items -->
+            <% const items = [
+            {id: 1, name: 'kentang'},
+            {id: 2, name: 'wortel'},
+            {id: 3, name: 'bawang'}
+            ]; %>
             
+            <ul class="table-body">
+            
+            <!-- Gunakan forEach untuk mencetak element di array item -->
+            <% items.forEach((item) => { %>
+                <li>
+                <span class="id-column">
+                    <!-- Tampilkan property id milik item-->
+                    <%= item.id %>
+                </span>
+                <span class="name-column">
+                    <!-- Tampilkan property name milik item --> 
+                    <%= item.name %>
+                </span>
+                </li>
+            <% }); %>
+            </ul>
         </div>
         </div>
     </body>
