--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-        <a class="header-logo">LIST</a>
+        <a class="header-logo" href="/">LIST</a>
         </header>
         <div class="container">
         <div class="container-header">
