--- a/views/top.ejs
+++ b/views/top.ejs
@@ -7,41 +7,20 @@
         <script src="/send_url.js"></script>
     </head>
     <body>
-        <header>
-        <a class="header-logo">LIST</a>
-        </header>
-        <div class="container">
-        <div class="container-header">
-            <h1>Daftar Belanjaan</h1>
+        <div class="top-wrapper">
+        <div class="top-detail">
+            <h2 class="subtitle">Aplikasi daftar belanja</h2>
+            <h1 class="title">LIST</h1>
+            <p class="description">
+            LIST dapat membuat dan mengatur daftar pembelanjaan Anda dengan mudah.
+            <br>
+            Tambahkan barang yang Anda inginkan kapanpun, dimanapun.
+            </p>
+            <!-- Tambahkan attribute href -->
+            <a class="index-button" href="/index">Lihat daftar</a>
         </div>
-        <div class="index-table-wrapper">
-            <div class="table-head">
-            <span class="id-column">ID</span>
-            <span>Item</span>
-            </div>
-            <!-- Definisikan array items -->
-            <% const items = [
-            {id: 1, name: 'kentang'},
-            {id: 2, name: 'wortel'},
-            {id: 3, name: 'bawang'}
-            ]; %>
-            
-            <ul class="table-body">
-            
-            <!-- Gunakan forEach untuk mencetak element di array item -->
-            <% items.forEach((item) => { %>
-                <li>
-                <span class="id-column">
-                    <!-- Tampilkan property id milik item-->
-                    <%= item.id %>
-                </span>
-                <span class="name-column">
-                    <!-- Tampilkan property name milik item --> 
-                    <%= item.name %>
-                </span>
-                </li>
-            <% }); %>
-            </ul>
+        <div class="top-image">
+            <img src="/images/top.png">
         </div>
         </div>
     </body>
