--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,45 +8,28 @@
     </head>
     <body>
         <header>
-        <a class="header-logo" href="/">LIST</a>
+        <a href="/" class="header-logo">LIST</a>
         </header>
         <div class="container">
         <div class="container-header">
-            <h1>Daftar belanjaan</h1>
+            <h1>Daftar Belanjaan</h1>
         </div>
         <div class="index-table-wrapper">
             <div class="table-head">
             <span class="id-column">ID</span>
             <span>Item</span>
             </div>
-            <!-- Gunakan EJS untuk mendefinisikan constant item -->
-            <% const item = {id: 4, name: 'tomat'}; %>
-            
             <ul class="table-body">
-            <li>
-                <span class="id-column">1</span>
-                <span class="name-column">kentang</span>
-            </li>
-            <li>
-                <span class="id-column">2</span>
-                <span class="name-column">wortel</span>
-            </li>
-            <li>
-                <span class="id-column">3</span>
-                <span class="name-column">bawang</span>
-            </li>
-            <li>
-                <span class="id-column">
-                <!-- Tampilkan property id milik item -->
-                <%= item.id %>
-                </span>
-                <span class="name-column">
-                <!-- Tampilkan property name milik item -->
-                <%= item.name %>
-                </span>
-            </li>
+            <% items.forEach((item) => { %>
+                <li>
+                <div class="item-data">
+                    <span class="id-column"><%= item.id %></span>
+                    <span class="name-column"><%= item.name %></span>
+                </div>
+                </li>
+            <% }) %>
             </ul>
         </div>
-        </div>
-    </body>
+    </div>
+  </body>
 </html>
