--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,8 @@
         <div class="container">
         <div class="container-header">
             <h1>Daftar Belanjaan</h1>
+            <!-- Tambahkan tautan ke halaman penambahan item -->
+            <a href="/new" class="new-button">+ Tambahkan</a>
         </div>
         <div class="index-table-wrapper">
             <div class="table-head">
@@ -30,6 +32,6 @@
             <% }) %>
             </ul>
         </div>
-    </div>
-  </body>
+        </div>
+    </body>
 </html>
